--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         function aceitou() {
             tocarMusica();
             // Muda o texto e esconde os botões
-            document.getElementById('titulo').innerHTML = "Te amo bb! ❤️<br><span style='font-size: 20px;'>Agora você é Danielly Agatha da Costa de Almeida Viana ihihihi</span>";
+            document.getElementById('titulo').innerHTML = "Te amo bb ❤️❤️<br><span style='font-size: 20px;'>Agora você é minha, e eu sou todo seu!!!</span>";
             document.getElementById('container-botoes').style.display = 'none';
             
             // Inicia a chuva de corações
@@ -129,4 +129,5 @@
         }
     </script>
 </body>
+
 </html></html>
