--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 </head>
 <body>
 
-    <h1 id="titulo">Milly é gay?</h1>
+    <h1 id="titulo">Você é gay?</h1>
 
     <div class="buttons" id="container-botoes">
         <button id="btn-sim" onclick="aceitou()">Sim</button>
@@ -149,4 +149,5 @@
     </script>
 </body>
 </html>
+
 
