--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 </head>
 <body>
 
-    <h1 id="titulo">Você é gay?</h1>
+    <h1 id="titulo">Quer namorar comigo?</h1>
 
     <div class="buttons" id="container-botoes">
         <button id="btn-sim" onclick="aceitou()">Sim</button>
@@ -106,7 +106,7 @@
 
         function aceitou() {
             forcarTocar();
-            document.getElementById('titulo').innerHTML = "Parabéns!!<br><span style='font-size: 20px;'>Todos apoiamos vc!! </span>";
+            document.getElementById('titulo').innerHTML = "Te amo bb ❤️❤️<br><span style='font-size: 20px;'>Agora você é minha, e eu sou todo seu!!</span>";
             document.getElementById('container-botoes').style.display = 'none';
             document.getElementById('video-div').style.marginTop = "50px";
             setInterval(criarCoracao, 300);
@@ -149,5 +149,6 @@
     </script>
 </body>
 </html>
+
 
 
